--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,19 @@
 #map 
 {
+    width: 100%;
     height: 100%;
 }
 
-/* Optional: Makes the sample page fill the window. */
-html, body 
+html, body
 {
     height: 100%;
-    margin: 0;
     padding: 0;
+    margin: 0;
 }
+
+.stick
+{
+    position: fixed;
+    top: 0px;
+}
+
