--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,16 @@
 {
     width: 100%;
     height: 100%;
+    padding: 0%;
+    margin: 0%;
+}
+
+#errorDisplay
+{
+    color: red;
+    font-weight: bold;
+    padding: 5%;
+    margin: auto;
 }
 
 html, body
@@ -11,9 +21,20 @@ html, body
     margin: 0;
 }
 
-.stick
+.left
 {
+    width: 70%;
+    height: 100%;
+    float: left;
     position: fixed;
-    top: 0px;
+    top: 0%;
+    left: 0%;
 }
 
+.right
+{
+    width: 30%;
+    height: 100%;
+    padding: 2%;
+    float: right;
+}
